<?xml version="1.0"?>
<package format="2">
  <name>log_view</name>
  <version>0.0.0</version>
  <description>The log_view package</description>

  <author email="marcalban@hatchbed.com">Marc Alban</author>
  <maintainer email="marcalban@hatchbed.com">Marc Alban</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>libncurses-dev</depend>

</package>
